--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.1",
     "recharts": "^2.15.0",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.2"
